--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
 
         {% if session %}
             <div class="col">
-                <p>Hi {{session['firstname']}}, you are currently logged in as {{session['username']}}</p>
+                <p>Hi {{session['firstname']}}, you are currently logged in as {{session['username']}}.</p>
             </div>
             <div class="col">
                 <button type="button" class="btn btn-primary btn-lg">
@@ -69,7 +69,7 @@
         <div class="row">
             <div class="col">
                 <form method="post" action="/login">
-                    <p>Sign in: </p>
+                    <p>Sign in to see who is on the network: </p>
                     <input type="text" name="username" placeholder="Username" required/>
                     <input type="password" name="password" placeholder="Password" required/>     
                     <input type="submit" value="Submit"/>
@@ -77,6 +77,7 @@
             </div>
         </div>
 
+        <!-- The error variable is passed in from app.py if either the username or password is wrong -->
         <div class="row">
             <div class="col">
                 <p>{{error}}</p>
